--- a/style.css
+++ b/style.css
@@ -892,7 +892,7 @@ body {
 
 /* Internal Immersions Section */
 .immersions-section {
-    padding: 80px 0;
+    padding: 0;
 }
 
 .immersions-section h2 {
