--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .container {
   max-width: 1200px;
-  margin: 80px auto;
+  margin: 60px auto;
   padding: 0 20px;
   background: white;
 }
@@ -164,6 +164,10 @@ body {
 @media (max-width: 768px) {
   .accreditations {
     flex-direction: column;
+  }
+
+  .accreditations-section {
+    margin: 40px auto;
   }
 
   .column {
@@ -332,7 +336,7 @@ body {
   padding: 20px;
   /* border-radius: 8px; */
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-  max-width: 280px;
+  max-width: 200px;
   z-index: 3;
 }
 
@@ -1151,7 +1155,7 @@ body {
   }
 
   .overlay-card {
-    max-width: 150px; 
+    max-width: 150px;
     margin-left: auto;
     bottom: -60px;
   }
