--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .container h2 {
   text-align: center;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: bold;
   color: #b6081d;
   margin-bottom: 50px;
@@ -235,6 +235,7 @@ body {
 .who-we-are {
   background-color: #f8f9fa;
   padding: 80px 0;
+  padding-bottom: 100px;
   margin: 0;
 }
 
@@ -266,7 +267,7 @@ body {
 }
 
 .main-title {
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 700;
   line-height: 1;
   color: #1f2937;
@@ -510,8 +511,8 @@ body {
 }
 
 .course-label {
-  background-color: #b6081d;
-  color: #fff;
+  background-color: #ccc;
+  color: #000;
   font-size: 16px;
   font-weight: 600;
   text-align: center;
@@ -643,7 +644,7 @@ body {
 
 .university-partners h2 {
   text-align: center;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: bold;
   color: #b6081d;
   margin-bottom: 50px;
@@ -931,7 +932,7 @@ body {
 
 .alumni-section h2 {
   text-align: center;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: bold;
   color: #b6081d;
   margin-bottom: 50px;
