--- a/style.css
+++ b/style.css
@@ -902,24 +902,23 @@ body {
     justify-content: center;
   }
 
-  .stat-content{
+  .stat-content {
     text-align: center;
   }
 
   .university-partners h3 {
-    margin-bottom: 40px!important;
+    margin-bottom: 40px !important;
   }
 
-  .stat-icon{
+  .stat-icon {
     font-size: 24px;
-
   }
 
   .stat-number {
     font-size: 24px;
   }
 
-  .stat-text{
+  .stat-text {
     font-size: 14px;
   }
 }
@@ -1287,9 +1286,18 @@ body {
 }
 
 /* Admission Process Section */
+
 .admission-process-section {
   /* padding: 80px 0; */
   background-color: #fff;
+}
+
+.international-section {
+  background-color: #ddd;
+}
+
+.international-section .container {
+  background-color: #ddd;
 }
 
 .admission-process-section .container {
@@ -1308,7 +1316,7 @@ body {
 }
 
 .admission-process-section .section-title::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -1324,6 +1332,11 @@ body {
   gap: 30px;
 }
 
+.international-section .process-steps {
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
 .step-card {
   background-color: #0a2351;
   color: #ffffff;
@@ -1334,6 +1347,11 @@ body {
   position: relative;
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.international-section .step-card {
+  background-color: #fff;
+  color: #000;
 }
 
 .step-card:hover {
@@ -1375,11 +1393,21 @@ body {
   justify-content: center;
 }
 
+.international-section .step-icon {
+  margin-bottom: 0;
+}
+
 .step-icon img {
   width: 80px;
   height: 80px;
   max-width: 100%;
   max-width: 100%;
+}
+
+.international-section .step-icon img {
+  width: 100%;
+  height: 130px;
+  object-fit: contain;
 }
 
 .step-title {
@@ -1389,21 +1417,17 @@ body {
   vertical-align: middle;
 }
 
+.international-section .step-title {
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 20px;
+  vertical-align: middle;
+}
+
 .step-description {
   font-size: 14px;
   line-height: 1.6;
   color: rgba(255, 255, 255, 0.85);
-}
-
-.step-description strong {
-  color: #f1c40f;
-}
-
-.step-description small {
-  display: block;
-  margin-top: 10px;
-  font-size: 13px;
-  color: rgba(255, 255, 255, 0.7);
 }
 
 /* Responsive Styles */
